--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header bg-color">
         <nav>
             <h2 class="nav-title">Ma<span class="primary-text">r</span>y</h2>
             <ul>
@@ -37,6 +37,30 @@
 
     </header>
     <main>
+        <section class="about bg-color">
+            <h2 class="about-title">About me</h2>
+            <p class="description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+
+            <div class="about-items">
+            <div class="about-item">
+                <p class="item-title">Name</p>
+                <p class="item-description">Mary Hardy</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">Email</p>
+                <p class="item-description">123cjjdsjsdfj@.com</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">Date of birth</p>
+                <p class="item-description">5 june 2003</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">From</p>
+                <p class="item-description">Meherpur Bangladesh</p>
+            </div>
+        </div>
+        </section>
+        
 
     </main>
     <footer>
