--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styless/portfolio.css">
+    <script src="https://kit.fontawesome.com/9e35f52f4b.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="open-sans-normal">
@@ -28,8 +29,8 @@
                 <h3 class="banner-grettings dark2">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="bttn">Download</button>
-                <button class="bttn">Contact</button>
+                <button class="bttn"><i class="fa-solid fa-download"></i> Download</button>
+                <button class="bttn"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="banner-profilepic" src="images/hardy.png" alt="">
         </div>
@@ -143,7 +144,7 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
                 
             </div>
             <div class="text-center">
-                <button class="bttn">Download CV</button>
+                <button class="bttn"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
         
